--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -1165,22 +1165,22 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \seq_set_from_clist:NN #1#2
   {
-    \tl_set:Nx #1
+    \__kernel_tl_set:Nx #1
       { \s_@@ \clist_map_function:NN #2 \@@_wrap_item:n }
   }
 \cs_new_protected:Npn \seq_set_from_clist:Nn #1#2
   {
-    \tl_set:Nx #1
+    \__kernel_tl_set:Nx #1
       { \s_@@ \clist_map_function:nN {#2} \@@_wrap_item:n }
   }
 \cs_new_protected:Npn \seq_gset_from_clist:NN #1#2
   {
-    \tl_gset:Nx #1
+    \__kernel_tl_gset:Nx #1
       { \s_@@ \clist_map_function:NN #2 \@@_wrap_item:n }
   }
 \cs_new_protected:Npn \seq_gset_from_clist:Nn #1#2
   {
-    \tl_gset:Nx #1
+    \__kernel_tl_gset:Nx #1
       { \s_@@ \clist_map_function:nN {#2} \@@_wrap_item:n }
   }
 \cs_generate_variant:Nn \seq_set_from_clist:NN  {     Nc }
@@ -1238,9 +1238,9 @@
 %   braces which are outermost after space trimming.
 %    \begin{macrocode}
 \cs_new_protected:Npn \seq_set_split:Nnn
-  { \@@_set_split:NNnn \tl_set:Nx }
+  { \@@_set_split:NNnn \__kernel_tl_set:Nx }
 \cs_new_protected:Npn \seq_gset_split:Nnn
-  { \@@_set_split:NNnn \tl_gset:Nx }
+  { \@@_set_split:NNnn \__kernel_tl_gset:Nx }
 \cs_new_protected:Npn \@@_set_split:NNnn #1#2#3#4
   {
     \tl_if_empty:nTF {#3}
@@ -1260,7 +1260,7 @@
             \@@_set_split_end:
             \@@_set_split_auxi:w \prg_do_nothing:
           }
-        \tl_set:Nx \l_@@_internal_a_tl { \l_@@_internal_a_tl }
+        \__kernel_tl_set:Nx \l_@@_internal_a_tl { \l_@@_internal_a_tl }
       }
     #1 #2 { \s_@@ \l_@@_internal_a_tl }
   }
@@ -1329,7 +1329,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \seq_put_left:Nn #1#2
   {
-    \tl_set:Nx #1
+    \__kernel_tl_set:Nx #1
       {
         \exp_not:n { \s_@@ \@@_item:n {#2} }
         \exp_not:f { \exp_after:wN \@@_put_left_aux:w #1 }
@@ -1337,7 +1337,7 @@
   }
 \cs_new_protected:Npn \seq_gput_left:Nn #1#2
   {
-    \tl_gset:Nx #1
+    \__kernel_tl_gset:Nx #1
       {
         \exp_not:n { \s_@@ \@@_item:n {#2} }
         \exp_not:f { \exp_after:wN \@@_put_left_aux:w #1 }
@@ -1448,9 +1448,9 @@
 %   \texttt{x}-type expansion (|#1 #2 {#2}|) ensures that nothing is lost.
 %    \begin{macrocode}
 \cs_new_protected:Npn \seq_remove_all:Nn
-  { \@@_remove_all_aux:NNn \tl_set:Nx }
+  { \@@_remove_all_aux:NNn \__kernel_tl_set:Nx }
 \cs_new_protected:Npn \seq_gremove_all:Nn
-  { \@@_remove_all_aux:NNn \tl_gset:Nx }
+  { \@@_remove_all_aux:NNn \__kernel_tl_gset:Nx }
 \cs_new_protected:Npn \@@_remove_all_aux:NNn #1#2#3
   {
     \@@_push_item_def:n
@@ -1515,9 +1515,9 @@
 %   from the stack, and the memory consumption becomes linear.
 %    \begin{macrocode}
 \cs_new_protected:Npn \seq_reverse:N
-  { \@@_reverse:NN \tl_set:Nx }
+  { \@@_reverse:NN \__kernel_tl_set:Nx }
 \cs_new_protected:Npn \seq_greverse:N
-  { \@@_reverse:NN \tl_gset:Nx }
+  { \@@_reverse:NN \__kernel_tl_gset:Nx }
 \cs_new_protected:Npn \@@_reverse:NN #1 #2
   {
     \cs_set_eq:NN \@@_tmp:w \@@_item:n
@@ -1704,7 +1704,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \seq_get_left:NN #1#2
   {
-    \tl_set:Nx #2
+    \__kernel_tl_set:Nx #2
       {
         \exp_after:wN \@@_get_left:wnw
         #1 \@@_item:n { \q_no_value } \s_@@_stop
@@ -1756,7 +1756,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \seq_get_right:NN #1#2
   {
-    \tl_set:Nx #2
+    \__kernel_tl_set:Nx #2
       {
         \exp_after:wN \use_i_ii:nnn
         \exp_after:wN \@@_get_right_loop:nw
@@ -1797,9 +1797,9 @@
 %   finally stops the loop.
 %    \begin{macrocode}
 \cs_new_protected:Npn \seq_pop_right:NN
-  { \@@_pop:NNNN \@@_pop_right:NNN \tl_set:Nx }
+  { \@@_pop:NNNN \@@_pop_right:NNN \__kernel_tl_set:Nx }
 \cs_new_protected:Npn \seq_gpop_right:NN
-  { \@@_pop:NNNN \@@_pop_right:NNN \tl_gset:Nx }
+  { \@@_pop:NNNN \@@_pop_right:NNN \__kernel_tl_gset:Nx }
 \cs_new_protected:Npn \@@_pop_right:NNN #1#2#3
   {
     \cs_set_eq:NN \@@_tmp:w \@@_item:n
@@ -1811,7 +1811,7 @@
         #2
         {
           \if_false: { \fi: }
-          \tl_set:Nx #3
+          \__kernel_tl_set:Nx #3
         }
         { } \use_none:nn
     \cs_set_eq:NN \@@_item:n \@@_tmp:w
@@ -1859,10 +1859,10 @@
   { \@@_pop_TF:NNNN \@@_pop_left:NNN \tl_gset:Nn #1 #2 }
 \prg_new_protected_conditional:Npnn \seq_pop_right:NN #1#2
   { T , F , TF }
-  { \@@_pop_TF:NNNN \@@_pop_right:NNN \tl_set:Nx #1 #2 }
+  { \@@_pop_TF:NNNN \@@_pop_right:NNN \__kernel_tl_set:Nx #1 #2 }
 \prg_new_protected_conditional:Npnn \seq_gpop_right:NN #1#2
   { T , F , TF }
-  { \@@_pop_TF:NNNN \@@_pop_right:NNN \tl_gset:Nx #1 #2 }
+  { \@@_pop_TF:NNNN \@@_pop_right:NNN \__kernel_tl_gset:Nx #1 #2 }
 \prg_generate_conditional_variant:Nnn \seq_pop_left:NN { c }
   { T , F , TF }
 \prg_generate_conditional_variant:Nnn \seq_gpop_left:NN { c }
@@ -2123,9 +2123,9 @@
 %   semantics.
 %    \begin{macrocode}
 \cs_new_protected:Npn \seq_set_map_x:NNn
-  { \@@_set_map_x:NNNn \tl_set:Nx }
+  { \@@_set_map_x:NNNn \__kernel_tl_set:Nx }
 \cs_new_protected:Npn \seq_gset_map_x:NNn
-  { \@@_set_map_x:NNNn \tl_gset:Nx }
+  { \@@_set_map_x:NNNn \__kernel_tl_gset:Nx }
 \cs_new_protected:Npn \@@_set_map_x:NNNn #1#2#3#4
   {
     \@@_push_item_def:n { \exp_not:N \@@_item:n {#4} }
@@ -2142,9 +2142,9 @@
 %   <inline function>.
 %    \begin{macrocode}
 \cs_new_protected:Npn \seq_set_map:NNn
-  { \@@_set_map:NNNn \tl_set:Nx }
+  { \@@_set_map:NNNn \__kernel_tl_set:Nx }
 \cs_new_protected:Npn \seq_gset_map:NNn
-  { \@@_set_map:NNNn \tl_gset:Nx }
+  { \@@_set_map:NNNn \__kernel_tl_gset:Nx }
 \cs_new_protected:Npn \@@_set_map:NNNn #1#2#3#4
   {
     \@@_push_item_def:n { \exp_not:n { \@@_item:n {#4} } }
